--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>🚀API PAYEMENT MVOLA</h1>
+        <h1>🚀API PAYEMENT </h1>
         <p class="subtitle">API REST pour l'intégration Mvola Mobile Money</p>
         
         <div class="status">
