--- a/help.html
+++ b/help.html
@@ -298,18 +298,29 @@
                     </table>
 
                     <h4 style="margin-top: 20px;">Corps de la requête (Body - raw JSON)  exemple:</h4>
-                    <div class="code-block">
-                        <div class="box" role="region" aria-label="Exemple JSON">
-                            <pre><code>{
-                        <span class="key">"amount"</span>: <span class="string">"100"</span><span class="punct">,</span>
-                        <span class="key">"clientMsisdn"</span>: <span class="string">"0385694287"</span><span class="punct">,</span>
-                        <span class="key">"partnerMsisdn"</span>: <span class="string">"0340047287"</span><span class="punct">,</span>
-                        <span class="key">"descriptionTransaction"</span>: <span class="string">"Paiement test"</span><span class="punct">,</span>
-                        <span class="key">"referenceID"</span>: <span class="string">"REF1234567"</span><span class="punct">,</span>
-                        <span class="key">"name"</span>: <span class="string">"MonApplicationTest"</span>
-                        }</code></pre>
+                    
+                        <div style="
+                        background-color: #0d1117;
+                        color: #c9d1d9;
+                        border-radius: 8px;
+                        padding: 12px 16px;
+                        font-family: 'Fira Code', Consolas, 'Courier New', monospace;
+                        font-size: 14px;
+                        line-height: 1.4;
+                        white-space: pre;
+                        overflow-x: auto;
+                        box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+                        ">
+                        {
+                        <span style="color:#79c0ff">"amount"</span>: <span style="color:#a5d6ff">"100"</span>,
+                        <span style="color:#79c0ff">"clientMsisdn"</span>: <span style="color:#a5d6ff">"0385694287"</span>,
+                        <span style="color:#79c0ff">"partnerMsisdn"</span>: <span style="color:#a5d6ff">"0340047287"</span>,
+                        <span style="color:#79c0ff">"descriptionTransaction"</span>: <span style="color:#a5d6ff">"Paiement test"</span>,
+                        <span style="color:#79c0ff">"referenceID"</span>: <span style="color:#a5d6ff">"REF1234567"</span>,
+                        <span style="color:#79c0ff">"name"</span>: <span style="color:#a5d6ff">"MonApplicationTest"</span>
+                        }
                         </div>
-                    </div>
+                                            
 
                     <h4 style="margin-top: 20px;">Description des paramètres :</h4>
                     <table>
@@ -360,58 +371,6 @@
                 </div>
             </div>
 
-            <div class="section">
-                <h2>💡 Exemple complet avec JavaScript (Fetch API)</h2>
-                <div class="code-block">
-<span style="color: #c586c0;">// Étape 1: Obtenir le token</span>
-<span style="color: #569cd6;">async function</span> getToken() {
-  <span style="color: #569cd6;">const</span> consumerKey = <span class="string">'votre_consumer_key'</span>;
-  <span style="color: #569cd6;">const</span> consumerSecret = <span class="string">'votre_consumer_secret'</span>;
-  
-  <span style="color: #569cd6;">const</span> response = <span style="color: #569cd6;">await</span> fetch(<span class="string">'https://python-mvola-api.onrender.com/mvola/token'</span>, {
-    method: <span class="string">'POST'</span>,
-    headers: {
-      <span class="string">'Authorization'</span>: <span class="string">'Basic '</span> + btoa(consumerKey + <span class="string">':'</span> + consumerSecret)
-    }
-  });
-  
-  <span style="color: #569cd6;">const</span> data = <span style="color: #569cd6;">await</span> response.json();
-  <span style="color: #569cd6;">return</span> data.access_token;
-}
-
-<span style="color: #c586c0;">// Étape 2: Effectuer la transaction</span>
-<span style="color: #569cd6;">async function</span> makeTransaction(token) {
-  <span style="color: #569cd6;">const</span> response = <span style="color: #569cd6;">await</span> fetch(<span class="string">'https://python-mvola-api.onrender.com/mvola/transaction'</span>, {
-    method: <span class="string">'POST'</span>,
-    headers: {
-      <span class="string">'Authorization'</span>: <span class="string">'Bearer '</span> + token,
-      <span class="string">'Content-Type'</span>: <span class="string">'application/json'</span>
-    },
-    body: JSON.stringify({
-      amount: <span class="string">"100"</span>,
-      clientMsisdn: <span class="string">"0385694287"</span>,
-      partnerMsisdn: <span class="string">"0340047287"</span>,
-      descriptionTransaction: <span class="string">"Paiement test"</span>,
-      referenceID: <span class="string">"REF1234567"</span>,
-      name: <span class="string">"MonApplicationTest"</span>
-    })
-  });
-  
-  <span style="color: #569cd6;">return await</span> response.json();
-}
-
-<span style="color: #c586c0;">// Utilisation</span>
-<span style="color: #569cd6;">async function</span> processPayment() {
-  <span style="color: #569cd6;">try</span> {
-    <span style="color: #569cd6;">const</span> token = <span style="color: #569cd6;">await</span> getToken();
-    <span style="color: #569cd6;">const</span> result = <span style="color: #569cd6;">await</span> makeTransaction(token);
-    console.log(<span class="string">'Transaction réussie:'</span>, result);
-  } <span style="color: #569cd6;">catch</span> (error) {
-    console.error(<span class="string">'Erreur:'</span>, error);
-  }
-}
-                </div>
-            </div>
 
             <div class="section">
                 <h2>⚠️ Points importants</h2>
@@ -426,7 +385,7 @@
         </div>
 
         <footer>
-            <p>© 2024 Documentation API MVola | Pour plus d'informations, consultez la documentation officielle</p>
+            <p>© 2025 Documentation API MVola</p>
         </footer>
     </div>
 </body>
